pgblackboard/static/app.css
/* ... */
a > small {
    opacity: .7;
    }

.treenode {
    /* for toggler absolute pos */
    position: relative;
    }

/* children indent */
.treenode > ul {
    padding-left: 1.3em;
    }

.treenode-toggler {
    position: absolute;
    left: -1.1em;
    top: .3em;
    margin: 0;
    width: 1em;
    height: 1em;
    opacity: 0.5;
    font-size: .875em;
    }

.treenode-toggler-icon {
    display: block;
    }

.treenode-toggler:hover {
    opacity: 1;
    }

.treenode-groupstart {
    border-top-width: 1px;
    border-top-style: dotted;
    padding-top: .2em;
    margin-top: .2em;
    }



.treenode-icon::before,
.treenode-icon::after {
    font-family: 'fontello';
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    speak: none;
    display: inline-block;
    text-decoration: inherit;
    width: 1em;
    text-align: center;
    text-transform: none;
    line-height: 1em;
    }

.treenode-icon_database::before { content: '\e801'; }
.treenode-icon_schema::before { content: '\e806'; }
.treenode-icon_extension::before { content: '\e808'; }
.treenode-icon_func::before,
.treenode-icon_agg::before { content: '\e80b'; }
.treenode-icon_table::before,
.treenode-icon_view::before,
.treenode-icon_matview::before,
.treenode-icon_foreigntable::before { content: '\e800'; }
.treenode-icon_column::before { content: '\e80d'; }
.treenode-icon_pkcolumn::before { content: '\e80a'; }
.treenode-icon_fkcolumn::before { content: '\e80d'; } /*{ content: '\e80c'; }*/
.treenode-icon_index::before { content: '\e80f'; }
.treenode-icon_trigger::before { content: '\e805'; }
.treenode-icon_foreignkey::before { content: '\e80c'; }
.treenode-icon_unique::before { content: '\e80a'; }
.treenode-icon_check::before { content: '\e807'; }

/* subicons */
.treenode-icon::after {
    border-radius: 50%;
    font-size: .75em;
    margin-left: -1em;
    position: relative;
    top: .2em;
    left: .2em;
    }

.treenode-icon_view::after { content: '\e80b'; }
.treenode-icon_matview::after { content: '\e80b'; }
.treenode-icon_foreigntable::after { content: '\e809'; }
.treenode-icon_fkcolumn::after { content: '\e803'; }



#queryform {
    position: relative;

    /* hide execbar when collapsed */
    overflow: hidden;
    }

#execbar {
    position: absolute;
    bottom: 0;
    right: 0;
    z-index: 10;
    padding: .2em;
    border-top-left-radius: .3em;
    white-space: nowrap;
    }

#query {
    display: block;
    }

#result {
    margin: 0;
    padding: 0;
    border: none;
    }

.spinner-shield {
    overflow: hidden;
    z-index: 1000;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,.2);
    }

.spinner-shield > .spinner {
    position: absolute;
    top: 50%;
    left: 50%;
    margin-top: -.5em;
    margin-left: -.5em;
    font-size: 40px;
    opacity: .5;
    }

.spinner {
    width: 1em;
    height: 1em;
    border: .2em solid;
    border-top-color: transparent;
    border-left-color: transparent;
    border-radius: 50%;
    box-sizing: border-box;
    -webkit-transform-origin: center center;
       -moz-transform-origin: center center;
        -ms-transform-origin: center center;
            transform-origin: center center;
    -webkit-transform: rotate(700000deg);
       -moz-transform: rotate(700000deg);
        -ms-transform: rotate(700000deg);
            transform: rotate(700000deg);
    -webkit-transition: -webkit-transform 1000s linear;
       -moz-transition:    -moz-transform 1000s linear;
        -ms-transition:     -ms-transform 1000s linear;
            transition:         transform 1000s linear;
    }


.execute-action {
    font-weight: bold;
    }



.scrollbox::-webkit-scrollbar {
    width: 12px;
    height: 12px;
    padding: 2px;
    }

.scrollbox::-webkit-scrollbar-button:start:decrement,
.scrollbox::-webkit-scrollbar-button:end:increment {
    display: block;
    height: 0;
    width: 0;
    background-color: transparent;
    }

.scrollbox::-webkit-scrollbar-thumb {
    border-radius: 6px;
    border: 2px solid;
    }

.CodeMirror {
    height: 100% !important;
    width: 100% !important;
}

.CodeMirror-vscrollbar {
    bottom: 27px !important;
    }

.CodeMirror-hscrollbar {
    right: 109px !important;
    left: 0 !important;
    }

.CodeMirror-gutters {
    border-right: 0px;
    }


.CodeMirror div.CodeMirror-cursor {
    border-left-width: 1px;
    border-left-style: solid;
    border-left-color: inherit;
    }

.CodeMirror-matchingbracket {
    text-decoration: underline;
    }




.CodeMirror {
    font-family: Monaco, Menlo, "Ubuntu Mono", Consolas, source-code-pro, monospace;
    font-size: 20px;
    height: 100%;
    }

.errors-gutter {
    width: 1em;
    }





.gutter-marker-error::before {
    width: 1em;
    line-height: 1.2em;
    font-size: .8em;
    content: '\e802';
    color: #ff4848;
    font-family: 'fontello';
    font-style: normal;
    font-weight: normal;
    speak: none;
    display: inline-block;
    margin-right: .2em;
    text-align: center;
    font-variant: normal;
    text-transform: none;
    }

.gutter-marker-error:hover::after {
    content: attr(data-title);
    display: block;
    position: absolute;
    font-size: 14px;
    white-space: pre;
    border-radius: .3em;
    padding: .3em;
    left: 2em;
    }
/* ... */

